# TRust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
scratch/: fix-baked.html  fix.html  fix2-baked.html  fix2.html  fixrow-baked.html  fixrow.html  flexwrap-baked.html  flexwrap.html  home.css  server.pid  spot-baked.html  spot.html  spot2-baked.html  spot2.html  spot3-baked.html  spot3.html  spot4-baked.html  spot4.html  spotgrid.html  steam-fx.html  steam-raw.html  steam-settled.html  steam.html  store.css
src/: app.rs  cp437.rs  doc.rs  dom.rs  gemini.rs  gopher.rs  http.rs  img.rs  js.rs  layout.rs  main.rs  oneshot.rs  telnet.rs  tls.rs  ui.rs  ws.rs
src/layout2/: boundary.rs  contract.rs  flex.rs  float.rs  flow.rs  grid.rs  inline.rs  intrinsic.rs  measure.rs  mod.rs  paint.rs  replaced.rs  style.rs  table.rs  tree.rs  value.rs
