[package]
name = "TRust"
version = "0.1.0"
edition = "2024"
description = "Telnet in Rust — a GNU-telnet-compatible client and small-net (gopher, TLS) browser with a cyberpunk TUI"
license = "MIT OR Apache-2.0"

[[bin]]
name = "trust"
path = "src/main.rs"

[dependencies]
bytes = "1.11.1"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
html2text = "0.17.1"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
libmudtelnet = "2.0.2"
ratatui = "0.30.1"
ratatui-image = { version = "11.0.4", default-features = false, features = ["crossterm"] }
sha2 = "0.11.0"
textwrap = "0.16.2"
tokio = { version = "1.52.3", features = ["net", "rt-multi-thread", "macros", "io-util", "sync", "time"] }
tokio-rustls = "0.26.4"
tui-term = "0.3.4"
url = "2.5.8"
webpki-roots = "1.0.7"

[dev-dependencies]
rcgen = "0.14.8"

# Optimized binary: whole-program LTO and a single codegen unit trade
# compile time for speed and size; symbols stripped (panic messages
# still print, just without a backtrace).
[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
