[package]
name = "TRust"
version = "0.1.0"
edition = "2024"
description = "Telnet in Rust — a GNU-telnet-compatible client and small-net (gopher, TLS) browser with a cyberpunk TUI"
license = "MIT OR Apache-2.0"

[[bin]]
name = "trust"
path = "src/main.rs"

[dependencies]
boa_engine = { version = "0.21", features = ["annex-b"] }
bytes = "1.11.1"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
html5ever = "0.39"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
libmudtelnet = "2.0.2"
ratatui = "0.30.1"
ratatui-image = { version = "11.0.4", default-features = false, features = ["crossterm"] }
rcgen = "0.14.8"
sha2 = "0.11.0"
textwrap = "0.16.2"
tokio = { version = "1.52.3", features = ["net", "rt-multi-thread", "macros", "io-util", "sync", "time"] }
tokio-rustls = "0.26.4"
tui-term = "0.3.4"
url = "2.5.8"
webpki-roots = "1.0.7"

[patch.crates-io]
crossterm = { path = "vendor/crossterm-0.29.0" }
# TRust's Boa fork. Boa is the only viable pure-Rust JS engine, but it's
# half-finished and we keep hitting its edges; we vendor it so we can fix
# the engine itself instead of working around it from js.rs. First fix:
# the cyclic-module `Debug` recursion that turned a recoverable module
# assert into an uncatchable stack-overflow abort (see src/module/*).
boa_engine = { path = "vendor/boa_engine-0.21.1" }

# Optimized binary: whole-program LTO and a single codegen unit trade
# compile time for speed and size; symbols stripped (panic messages
# still print, just without a backtrace).
[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
