[package]
name = "TRust"
version = "0.1.0"
edition = "2024"
description = "Telnet in Rust — a GNU-telnet-compatible client and small-net (gopher, TLS) browser with a cyberpunk TUI"
license = "MIT OR Apache-2.0"

[[bin]]
name = "trust"
path = "src/main.rs"

[features]
# `mimalloc` (default on) installs the mimalloc global allocator. Parse and
# bytecode-compile of large JS bundles are dominated by millions of small
# allocations (AST nodes, CodeBlocks); mimalloc is ~17% faster there than
# glibc malloc, end to end, behaviour-identically. It is the one C dependency
# (libmimalloc-sys) — the pure-Rust ethos is about the *engine* (Boa, not v8),
# not the allocator, and rustls already links C crypto — but it's isolated
# behind this feature: `--no-default-features` keeps the build pure-Rust.
default = ["mimalloc"]
# `libmimalloc-sys` (the same C lib mimalloc already pulls — no new build dep)
# exposes `mi_collect`, which we call at navigation boundaries to return a heavy
# page's freed high-water to the OS (see `release_allocator_memory`).
mimalloc = ["dep:mimalloc", "dep:libmimalloc-sys"]

[dependencies]
boa_engine = { version = "0.21", features = ["annex-b"] }
bytes = "1.11.1"
crossterm = { version = "0.29.0", features = ["event-stream"] }
# Default features = the pure-Rust `miniz_oxide` backend. NEVER enable the
# `zlib`/`zlib-ng`/`cloudflare_zlib`/`miniz-sys` features — those pull a C
# decompressor and betray the pure-Rust ethos. We only DECODE (gzip/deflate
# responses a server forces on us unsolicited); we never advertise or compress.
flate2 = "1"
futures = "0.3.32"
html5ever = "0.39"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
libmimalloc-sys = { version = "0.1", features = ["extended"], optional = true }
libmudtelnet = "2.0.2"
mimalloc = { version = "0.1", optional = true }
ratatui = "0.30.2"
ratatui-image = { version = "11.0.4", default-features = false, features = ["crossterm"] }
# Static SVG image rendering. `resvg`/`usvg`/tiny-skia are pure Rust; text and
# embedded data: raster images stay enabled for web compatibility. System-font
# discovery reads font files through Rust and is initialized once in img.rs.
# memmap-fonts is deliberately omitted: ordinary reads keep this path free of
# the font database's mmap unsafe block.
resvg = { version = "0.47.0", default-features = false, features = ["text", "system-fonts", "raster-images"] }
rcgen = "0.14.8"
sha2 = "0.11.0"
textwrap = "0.16.2"
tiny-skia = "0.12.0"
svgtypes = "0.16.1"
tokio = { version = "1.52.3", features = ["net", "rt-multi-thread", "macros", "io-util", "sync", "time"] }
tokio-rustls = "0.26.4"
tui-term = "0.3.4"
unicode-width = "0.2"
url = "2.5.8"
# WebAssembly engine. wasmi is a pure-Rust interpreter (the Boa-analog — no
# v8/C++), so it preserves the pure-Rust-engine ethos. Runtime parses BINARY
# wasm only (the web ships binary), so the default `wat` feature is dropped;
# `simd` is enabled because the SIMD proposal is finalized and the crate is
# pure-Rust (v128 still cannot cross the JS boundary — that throws TypeError per
# the JS-API spec — but a module may use SIMD internally). The real work is the
# `WebAssembly.*` JS<->wasm bridge in src/js.rs.
wasmi = { version = "1", default-features = false, features = ["std", "simd"] }
webpki-roots = "1.0.7"

[dev-dependencies]
# Compiles readable `.wat` text into wasm bytes for the WebAssembly test
# fixtures. Pure-Rust (wasmi ecosystem); NEVER a runtime dependency — the
# runtime accepts only binary wasm from the web.
wat = "1"

[patch.crates-io]
crossterm = { path = "vendor/crossterm-0.29.0" }
# TRust's Boa fork. Boa is the only viable pure-Rust JS engine, but it's
# half-finished and we keep hitting its edges; we vendor it so we can fix
# the engine itself instead of working around it from js.rs. First fix:
# the cyclic-module `Debug` recursion that turned a recoverable module
# assert into an uncatchable stack-overflow abort (see src/module/*).
boa_engine = { path = "vendor/boa_engine-0.21.1" }
# Vendored alongside boa_engine so we own the front half of the binding-
# resolution pipeline too: boa_ast holds the scope analyzer that assigns
# each scope its runtime index and each identifier its BindingLocator. The
# `with` + `new Function` scope-index divergence (Vue's v-for) is born here,
# not in the VM — fixing it at the source lets us delete the downstream
# clamp/force band-aids instead of compounding them.
boa_ast = { path = "vendor/boa_ast-0.21.1" }
# Vendored so we own the garbage collector too. boa_gc is a full
# stop-the-world mark-sweep with a 1 MiB collection threshold and no public
# config; real SPA bundles churn megabytes of short-lived garbage and thrash
# it into hundreds of full-heap collections at boot. We add a per-page
# threshold knob (`set_gc_threshold`) and profiling counters (`gc_profile`)
# so the collector stops dominating heavy page loads.
boa_gc = { path = "vendor/boa_gc-0.21.1" }
# Vendored so we own the parser too — specifically to expose a RAW parse
# (`Parser::parse_script_raw`) that builds the AST without the scope-analysis
# pass the public entries force on. Raw parse touches no scope and no realm, so
# it can run on a worker thread with a private interner; this is the keystone of
# parallel parse (the JS-engine perf plan's Step 5a): the lexer/parser bulk of
# the "parse" phase moves off the page's `Context` thread, while scope analysis
# + compile stay sequential on the page thread (global lexical bindings resolve
# by slot index, so their order must be preserved). The analyzed AST holds
# `JsString` locators and is not `Send`; the raw one is, which is what lets it
# cross threads.
boa_parser = { path = "vendor/boa_parser-0.21.1" }
# TRust's vendored WebAssembly engine. wasmi is a pure-Rust interpreter (the
# Boa-analog); we vendor the wasmi-labs crates so we OWN the engine and can
# fork/patch it the way we do Boa, if a WASM showstopper ever needs it. No
# patches yet — wasmi is complete — so these are byte-for-byte the 1.1.0 crates.
# (`wasmparser`/`spin`/`libm` are third-party deps left on crates.io.)
wasmi = { path = "vendor/wasmi-1.1.0" }
wasmi_core = { path = "vendor/wasmi_core-1.1.0" }
wasmi_ir = { path = "vendor/wasmi_ir-1.1.0" }
wasmi_collections = { path = "vendor/wasmi_collections-1.1.0" }

# Optimized binary: whole-program LTO and a single codegen unit trade
# compile time for speed and size; symbols stripped (panic messages
# still print, just without a backtrace).
[profile.release]
lto = "thin"
codegen-units = 16
strip = "symbols"

# Release optimizations + debug symbols, for profiling the JS engine
# (perf is locked down on this host; gdb/poor-man's sampling needs symbols).
# Does not affect `cargo build --release`.
[profile.profiling]
inherits = "release"
debug = true
strip = false
